--- a/The Theme/Moonlight/moonlight.xaml
+++ b/The Theme/Moonlight/moonlight.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
@@ -10,9 +10,9 @@
 
     <!--
         Theme Author: "Abod1960" 
-        based on Lunar color palette by sheeepdev " https://github.com/lunar-theme "...
-        Actually, I just recolored "dark theme by Milos Paripovic" to match this theme color palette...
-        
+        based on Moonlight color palette by Abod1960 " https://github.com/moonlight-theme "...
+        Actually, this is a recolored "dark theme by Milos Paripovic" to match this theme color palette...
+        /////////////
         Copy the whole Theme folder from /Themes/ and do mods there (themes with same name as official ones will be overwritten on program update)
         
         If the syntax is broken, it will load default theme (may cause crashes also)
@@ -29,7 +29,7 @@
         Pressing Ctrl+Shift+Alt+F5 reloads the theme so it is useful for editing themes, but not all keys will be reloaded as some require a restart
     -->
 
-    <Thickness x:Key="WindowPadding">1,1,0,1</Thickness>
+    <Thickness x:Key="WindowPadding">3,3,3,3</Thickness>
     <!--  margin/padding in XAML is in order Left,Top,Right,Bottom  -->
 
 
@@ -55,7 +55,7 @@
     <!--  Highlighted Text, like GB portion of file size, or number of selected files. Can be the same as TextPrimaryBrush to keep the same color  -->
     <SolidColorBrush x:Key="TextImportantBrush" Color="#0f92fe" />
 
-    <SolidColorBrush x:Key="AccentBrushForced" Color="#c69f68" />
+    <SolidColorBrush x:Key="AccentBrushForced" Color="#374656" />
 
 
     <!--  Secondary Text, like extension in File, or path in Favorites  -->
@@ -75,13 +75,13 @@
     <Style x:Key="PathPanelGroupBorder" TargetType="{x:Type Border}">
         <Setter Property="Background" Value="#1f2730" />
         <Setter Property="Margin" Value="12,0,12,12" />
-        <Setter Property="Padding" Value="0,8,8,8" />
+        <Setter Property="Padding" Value="4,8,4,8" />
         <Setter Property="CornerRadius" Value="4" />
     </Style>
 
     <Style x:Key="PathPanelGroupTitle" TargetType="{x:Type TextBlock}">
         <!--  BasedOn="{StaticResource {x:Type TextBlock}}"> Can't be DynamicResource :/  -->
-        <Setter Property="Margin" Value="8,-6,0,0" />
+        <Setter Property="Margin" Value="0,-6,0,0" />
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Foreground" Value="{DynamicResource SystemControlPageTextBaseHighBrush}" />
     </Style>
@@ -111,17 +111,7 @@
         <Setter Property="BorderThickness" Value="0,0,2,0" />
         <Setter Property="BorderBrush" Value="{DynamicResource SystemControlForegroundAccentBrush}" />
         <Setter Property="HorizontalAlignment" Value="Right" />
-        <Setter Property="Width" Value="20" />
-        <Setter Property="Background">
-            <Setter.Value>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
-                    <!--  This one should blend in with FilesPanelBorder so make it the same  -->
-                    <GradientStop Offset="0" Color="#1f2730" />
-                    <GradientStop Offset=".6" Color="#222222" />
-                    <GradientStop Offset=".9" Color="#374656" />
-                </LinearGradientBrush>
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Width" Value="2" />
     </Style>
 
     <!--  top of the fake shadow is faded out with this  -->
@@ -143,7 +133,7 @@
         <Setter Property="OpacityMask">
             <Setter.Value>
                 <LinearGradientBrush MappingMode="Absolute" StartPoint="0,0" EndPoint="0,44">
-                    <GradientStop Offset="0" Color="#ffffffff" />
+                    <GradientStop Offset="0" Color="#c0ceddff" />
                     <GradientStop Offset="1" Color="#00000000" />
                 </LinearGradientBrush>
             </Setter.Value>
@@ -158,8 +148,8 @@
  
 
     <Style x:Key="FilesPanelTitle" TargetType="{x:Type TextBlock}">
-        <Setter Property="Margin" Value="10,4,0,0" />
-        <Setter Property="FontSize" Value="18" />
+        <Setter Property="Margin" Value="7,4,0,0" />
+        <Setter Property="FontSize" Value="13" />
         <Setter Property="Foreground" Value="{DynamicResource SystemControlPageTextBaseHighBrush}" />
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
@@ -172,7 +162,7 @@
         <!--  Here you can set another path separator like >  -->
 
         <Setter Property="Margin" Value="0,4,0,0" />
-        <Setter Property="FontSize" Value="16" />
+        <Setter Property="FontSize" Value="13" />
         <Setter Property="Foreground" Value="{DynamicResource TextUnimportantBrush}" />
     </Style>
 
@@ -223,18 +213,18 @@
         x:Key="HoverItemEffect"
         BlurRadius="15"
         Direction="315"
-        Opacity=".5"
-        ShadowDepth="2"
-        Color="Black" />
+        Opacity="0"
+        ShadowDepth="0"
+        Color="green" />
 
     <!--  For dialogs/popups  -->
     <DropShadowEffect
         x:Key="PopupShadowEffect"
         BlurRadius="50"
         Direction="270"
-        Opacity=".8"
-        ShadowDepth="10"
-        Color="Black" />
+        Opacity="0"
+        ShadowDepth="0"
+        Color="red" />
     <Thickness x:Key="ShadowThickness">40,40,40,50</Thickness>
 
     <!--  For now only to control the corner radius; may be removed in the future  -->
@@ -297,7 +287,7 @@
         <!--  Set CornerRadius to 0 for sharp edges  -->
         <!--
         <Setter Property="CornerRadius" Value="0,0,0,0" />
-        <Setter Property="BorderBrush" Value="#3E3C41" />
+        <Setter Property="BorderBrush" Value="#374656" />
         <Setter Property="BorderThickness" Value="0,0,2,0" />
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Margin" Value="-2,6,-2,0" />
@@ -313,18 +303,30 @@
         <!--  Uncomment for border around non-active tab  -->
         <!--<Setter Property="BorderThickness" Value="1,1,0,1"/>
                     <Setter Property="BorderBrush" Value="Transparent" />-->
-        <Setter Property="Background" Value="#3E3C41" />
+        <Setter Property="Background" Value="#1f2730" />
         <Setter Property="Padding" Value="5,2,0,0" />
         <Setter Property="Margin" Value="0,2,0,0" />
         <Setter Property="Effect" Value="{DynamicResource HoverItemEffect}" />
     </Style>
 
     <Style x:Key="TabItemSelectedBorder" TargetType="{x:Type Border}">
-        <Setter Property="CornerRadius" Value="4,4,0,0" />
-        <!--<Setter Property="BorderThickness" Value="2,2,2,0" />-->
+        <Setter Property="CornerRadius" Value="0,0,0,0" />
+        <Setter Property="BorderBrush" Value="{DynamicResource SystemControlForegroundAccentBrush}" />
+        <Setter Property="BorderThickness" Value="0,2,0,0" />
         <Setter Property="Padding" Value="0,0,2,0" />
-        <Setter Property="Margin" Value="1,2,1,0" />
-        <Setter Property="Background" Value="#1f2730" />
+        <Setter Property="Margin" Value="2,2,2,0" />
+        <!--Background is there just because Windows 11 22H2 with option to show accent color in title bar will completely drown tabs in color and it wouln't be visible which one is selected-->
+        <Setter Property="Background">
+            <Setter.Value>
+                <!--<SolidColorBrush Color="{m:DynamicColor SystemAccentColor}" />-->
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,20" MappingMode="Absolute">
+                    <GradientStop Offset=".1" Color="#00000000" />
+                    <GradientStop Offset=".15" Color="#403E3C41" />
+                    <GradientStop Offset="1" Color="#00000000" />
+
+                </LinearGradientBrush>
+            </Setter.Value>
+        </Setter>
         <!--  best if the same as FilesPanelBorder so parent folder blend into child panel  -->
     </Style>
 
@@ -353,13 +355,13 @@
 
     <SolidColorBrush x:Key="ScrollBarTrackBrush" Color="#20888888" />
     <SolidColorBrush x:Key="ScrollBarThumbBrush" Color="#c69f68" />
-    <SolidColorBrush x:Key="ScrollBarThumbHoverBrush" Color="#191f28" />
+    <SolidColorBrush x:Key="ScrollBarThumbHoverBrush" Color="#93764d" />
 
     <!--  For background overlay when popup is open  -->
     <SolidColorBrush
         x:Key="OverlayBrush"
         Opacity=".15"
-        Color="#ffffff" />
+        Color="#c0cedd" />
 
     <!--  Flash item or right-click  -->
     <SolidColorBrush x:Key="FlashBrush" Color="#afd9fa" />
@@ -438,10 +440,10 @@
     <SolidColorBrush x:Key="TooltipBackgroundBrush" Color="#191f28" />
 
     <!--  Line indicating Files Panel has been scrolled; may be renamed/removed in the future  -->
-    <SolidColorBrush x:Key="BrushDimGraphics" Color="#777777" />
+    <SolidColorBrush x:Key="BrushDimGraphics" Color="#191f28" />
 
     <!--  For Sort-Arrows for now  -->
-    <SolidColorBrush x:Key="ToggleOnBrush" Color="#ffffff" />
+    <SolidColorBrush x:Key="ToggleOnBrush" Color="#c0cedd" />
     <SolidColorBrush x:Key="ToggleOffBrush" Color="#777777" />
 
 
@@ -468,17 +470,17 @@
 
 
     <SolidColorBrush x:Key="ButtonBackgroundBrush" Color="#191f28" />
-    <SolidColorBrush x:Key="ButtonBackgroundPointerOverBrush" Color="#c69f68" />
-    <SolidColorBrush x:Key="ButtonBackgroundPressedBrush" Color="#191f28" />
+    <SolidColorBrush x:Key="ButtonBackgroundPointerOverBrush" Color="#37465636" />
+    <SolidColorBrush x:Key="ButtonBackgroundPressedBrush" Color="#374656" />
     <SolidColorBrush x:Key="ButtonBackgroundDisabledBrush" Color="#303030" />
 
-    <SolidColorBrush x:Key="ButtonForegroundBrush" Color="#ffffff" />
-    <SolidColorBrush x:Key="ButtonForegroundPointerOverBrush" Color="#ffffff" />
-    <SolidColorBrush x:Key="ButtonForegroundPressedBrush" Color="#ffffff" />
+    <SolidColorBrush x:Key="ButtonForegroundBrush" Color="#c0cedd" />
+    <SolidColorBrush x:Key="ButtonForegroundPointerOverBrush" Color="#c0cedd" />
+    <SolidColorBrush x:Key="ButtonForegroundPressedBrush" Color="#93764d" />
     <SolidColorBrush x:Key="ButtonForegroundDisabledBrush" Color="#bbbbbb" />
 
     <SolidColorBrush x:Key="ButtonBorderBrush" Color="Transparent" />
-    <SolidColorBrush x:Key="ButtonBorderPointerOverBrush" Color="Transparent" />
+    <SolidColorBrush x:Key="ButtonBorderPointerOverBrush" Color="#93764d" />
     <SolidColorBrush x:Key="ButtonBorderPressedBrush" Color="Transparent" />
     <SolidColorBrush x:Key="ButtonBorderDisabledBrush" Color="Transparent" />
 
@@ -496,8 +498,8 @@
             <Setter.Value>
                 <LinearGradientBrush MappingMode="RelativeToBoundingBox" StartPoint="0,0" EndPoint="1,0">
                     <GradientStop Offset="0" Color="#00000000" />
-                    <GradientStop Offset="0.2" Color="#ffffffff" />
-                    <GradientStop Offset="0.8" Color="#ffffffff" />
+                    <GradientStop Offset="0.2" Color="#c0ceddff" />
+                    <GradientStop Offset="0.8" Color="#c0ceddff" />
                     <GradientStop Offset="1" Color="#00000000" />
                 </LinearGradientBrush>
             </Setter.Value>
